--- a/UsingDirectivesWithDataBinding.html
+++ b/UsingDirectivesWithDataBinding.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         Name:
-        <input type="text" ng-model="name" /> {{ name }}
+        <br/>
+        <input type="text" ng-model="name" />
+		<br/>
+        {{ name }}
     </div>
     <!-- [JS Dependency] -->
     <script src="scripts/angular/angular.min.js"></script>
