--- a/Iteratewithng-repeatdirective.html
+++ b/Iteratewithng-repeatdirective.html
@@ -15,6 +15,8 @@
         	</li>
         </ul>
     </div>
+    <!-- [JS Dependency] -->
+    <script src="scripts/angular/angular.js"></script>
 </body>
 
 </html>
