Added new Source of Angular

--- a/DefiningRoutes.html
+++ b/DefiningRoutes.html
@@ -7,25 +7,55 @@
 </head>
 
 <body>
+    <!-- PlaceHolder For View -->
+    <div ng-view=""></div>
     <!-- [JS Dependency] -->
-    <script src="scripts/angular/angular.min.js"></script>
+    <script src="scripts/bower_components/angular/angular.min.js"></script>
+    <script src="scripts/bower_components/angular-route/angular-route.min.js"></script>
     <script>
-    // Defining Module Routes
+    // Defining Module
     var demoApp = angular.module('demoApp', []);
+
+    // Defining Module Routes
     demoApp.config(function($routeProvider) {
         $routeProvider
             .when('/', {
                 controller: 'simpleController',
-                templateUrl: 'view1.html'
+                templateUrl: 'partials/view1.html'
             })
-            .when('/partials2', {
+            .when('/view2', {
                 controller: 'simpleController',
-                templateUrl: 'view2.html'
+                templateUrl: 'partials/view2.html'
             })
             .otherwise({
                 redirectTo: '/'
             });
     });
+
+    // Defining Controller
+    demoApp.controller('simpleController', function($scope) {
+        $scope.customers = [{
+            name: 'Dave Jones',
+            city: 'Phoenix'
+        }, {
+            name: 'Jamie Riley',
+            city: 'Atlanta'
+        }, {
+            name: 'Heedy Wahlin',
+            city: 'Chandler'
+        }, {
+            name: 'Thomas Wahlin',
+            city: 'Seattle'
+        }];
+    });
+
+    // Defining addCustomer for Adding New Customers
+    $scope.addCustomer = function() {
+        $scope.customer.push({
+            name: $scope.newCustomer.name,
+            city: $scope.newCustomer.city
+        });
+    }
     </script>
 </body>
 
