--- a/Using-Filters.html
+++ b/Using-Filters.html
@@ -17,7 +17,7 @@
         </li>
     </ul>
     <!-- [JS Dependency] -->
-    <script src="scripts/angular/angular.min.js"></script>
+    <script src="scripts/bower_components/angular/angular.min.js"></script>
 </body>
 
 </html>
