--- a/CreatingView&Controller.html
+++ b/CreatingView&Controller.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <!-- [JS Dependency] -->
-    <script src="scripts/angular/angular.min.js"></script>
+    <script src="scripts/bower_components/angular/angular.min.js"></script>
     <script>
     angular.module('myApp', []).controller('simpleController', function($scope) {
         $scope.customers = [{
