--- a/Iteratewithng-repeatdirective.html
+++ b/Iteratewithng-repeatdirective.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <!-- [JS Dependency] -->
-    <script src="scripts/angular/angular.js"></script>
+    <script src="scripts/bower_components/angular/angular.min.js"></script>
 </body>
 
 </html>
