--- a/ModulewithController.html
+++ b/ModulewithController.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <!-- [JS Dependency] -->
-    <script src="scripts/angular/angular.min.js"></script>
+    <script src="scripts/bower_components/angular/angular.min.js"></script>
     <script>
     // What the Array For
     // var demoApp = angular.module('demoApp', []);
