--- a/UsingDirectivesWithDataBinding.html
+++ b/UsingDirectivesWithDataBinding.html
@@ -15,7 +15,7 @@
         {{ name }}
     </div>
     <!-- [JS Dependency] -->
-    <script src="scripts/angular/angular.min.js"></script>
+    <script src="scripts/bower_components/angular/angular.min.js"></script>
 </body>
 
 </html>
