route module Added

--- a/DefiningRoutes.html
+++ b/DefiningRoutes.html
@@ -14,7 +14,7 @@
     <script src="scripts/bower_components/angular-route/angular-route.min.js"></script>
     <script>
     // Defining Module
-    var demoApp = angular.module('demoApp', []);
+    var demoApp = angular.module('demoApp', ['ngRoute']);
 
     // Defining Module Routes
     demoApp.config(function($routeProvider) {
